<resources>
    <string name="app_name">تایکی</string>
    <string name="drawer_open">asd</string>
    <string name="drawer_close">asd</string>

    <string name="button_register_next_step">Next</string>
    <string name="button_cancel">انصراف</string>
    <string name="button_skip">بعدا انجام میدم</string>
    <string name="button_send">ارسال</string>

    <string name="hint_spending_code"><font size="12">کد خرید</font></string>
    <string name="hint_login_username"><font size="12">نام کاربری</font></string>
    <string name="hint_login_password"><font size="12">رمز عبور</font></string>
    <string name="hint_register_first_name"><font size="12">نام</font></string>
    <string name="hint_register_last_name"><font size="12">نام خانوادگی</font></string>
    <string name="hint_register_cell_number"><font size="12">شماره موبایل</font></string>
    <string name="hint_register_verification_code"><font size="12">کد ثبت نام</font></string>

    <string name="sex_male">مرد</string>
    <string name="sex_female">زن</string>

    <string name="text_view_sex">جنسیت</string>
    <string name="text_view_date_of_birth">تاریخ تولد</string>
    <string name="text_view_select_tags">لطفادسته بندی های مورد علاقه خود را انتخاب کنید</string>


    <string name="toast_error_no_internet_connection">لطفا اینترنت خود را فعال کنید</string>
    <string name="toast_error_no_location_enabled">لطفا موقعیت یاب را فعال کنید</string>

</resources>
