<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="15dp">

    <EditText
        android:id="@+id/et_register_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:gravity="center"
        android:hint="@string/hint_register_verification_code"/>

    <Button
        android:id="@+id/btn_register_send_verification_code"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size_title"
        android:padding="5dp"
        android:gravity="center"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/btn_register_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/text_size_title"
        android:padding="5dp"
        android:gravity="center"
        android:background="@android:color/transparent"/>

</RelativeLayout>